fix: update body copy bold color on dark theme for better contrast

--- a/packages/tailwind-theme/index.css
+++ b/packages/tailwind-theme/index.css
@@ -85,7 +85,7 @@
   --color-body-copy-on-dark: #ccc;
 
   --color-body-copy-bold: #333;
-  --color-body-copy-bold-on-dark: #eee;
+  --color-body-copy-bold-on-dark: #e2e2e2;
 
   --color-body-copy-link: #187bb4;
   --color-body-copy-link-on-light: #166ea2;
